<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="success_toast">Success!</string>
    <string name="fail_toast">Fail!</string>
    <string name="server_host_hint">Server Host</string>
    <string name="server_proxy_hint">Server Proxy</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search...</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">SHOW FAMIlY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="fathers_side">Father\'s Side</string>
    <string name="filter_fathers_side">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mothers_side">Mother\'s Side</string>
    <string name="filter_mothers_side">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="filter_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="logout">Logout</string>
    <string name="return_login">RETURN TO LOGIN SCREEN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="gender">Gender</string>
    <string name="life_events">LIFE EVENTS</string>
    <string name="family">FAMILY</string>
    <string name="click_on_marker">Click on a marker to see event details</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="spouse">Spouse</string>
    <string name="child">Child</string>
</resources>